--- a/style.scss
+++ b/style.scss
@@ -2,19 +2,21 @@
   display: none;
 }
 
-
 @mixin flex-row() {
   display: flex;
   flex-direction: row;
 }
+
 @mixin red-button() {
-  border: 1px solid #f53838;
+  border: 2px solid #f53838;
   color: #f53838;
   font-weight: 600;
   padding: 13px 45px;
   border-radius: 100px;
   text-decoration: none;
+  background: white;
 }
+
 @mixin white-button() {
   margin-right: 40px;
   font-weight: 600;
@@ -27,10 +29,11 @@
   flex-direction: column;
 }
 
-*{
+* {
   box-sizing: border-box;
   margin: 0;
 }
+
 
 .container {
   max-width: 1140px;
@@ -61,39 +64,64 @@ a {
     @include flex-row;
     justify-content: space-between;
   }
+
   .header-nav {
     .nav-link {
       color: #4f5665;
       font-size: 16px;
       font-weight: 400;
       text-decoration: none;
+      line-height: 41px;
     }
+    .nav-link:hover {
+      color: #f53838;
+    }
+
     .nav-item:not(:last-child) {
       margin-right: 40px;
     }
   }
+
   .header-sign {
     .white-button {
       @include white-button;
+      line-height: 41px;
+
     }
+
     .red-button {
       @include red-button;
+      line-height: 41px;
+    }
+
+    .red-button:hover {
+      background: #f53838;
+      color: white;
     }
   }
 }
 
 .entry {
   padding-top: 100px;
+
   .container {
     @include flex-row;
+    flex-wrap: nowrap;
   }
+
   .item {
     max-width: 550px;
     width: 100%;
+
     img {
       width: 100%;
     }
   }
+
+  .entry-page {
+    display: flex;
+  }
+
   .entry-text-content {
     h1 {
       font-size: 50px;
@@ -101,22 +129,27 @@ a {
       color: #0b132a;
       margin-top: 33px;
       margin-bottom: 20px;
+
       span {
         font-weight: 700;
       }
     }
+
     p {
       color: #4f5665;
       line-height: 30px;
       margin-top: 20px;
       margin-bottom: 33px;
+
       span {
         font-weight: 600;
       }
     }
+
     .entry-button {
       color: white;
       background: #f53838;
+      border-color: none;
       border-radius: 10px;
       box-shadow: 0 20px 40px rgba(245, 56, 56, 0.35);
       padding: 21px 75px;
@@ -124,10 +157,14 @@ a {
       text-decoration: none;
       display: inline-block;
     }
+
+    .entry-button:hover {
+      background: #0b132a;
+    }
   }
 }
 
-.about{
+.about {
 
   .container {
     @include flex-row;
@@ -136,22 +173,27 @@ a {
     padding: 20px;
     position: relative;
   }
+
   .item {
     width: 33.333%;
     @include flex-row;
     justify-content: center;
+
     img {
       margin-right: 36px;
     }
   }
+
   .about-text p:first-child {
     font-size: 25px;
     text-align: right;
   }
+
   .about-text p:last-child {
     color: #4f5665;
     font-size: 20px;
   }
+
   .line-left:before {
     position: absolute;
     display: block;
@@ -163,6 +205,7 @@ a {
     bottom: 10px;
     opacity: 0.1;
   }
+
   .line-right:before {
     position: absolute;
     display: block;
@@ -181,64 +224,79 @@ a {
     @include flex-row;
     justify-content: space-between;
   }
+
   .features-right {
     max-width: 428px;
     width: 100%;
+
     h2 {
       font-size: 35px;
       margin-bottom: 20px;
     }
+
     p {
       color: #4f5665;
       line-height: 30px;
     }
+
     ul {
       margin-top: 20px;
       list-style-type: none;
-      padding: 0  ;
+      padding: 0;
+
       li {
         margin-bottom: 20px;
         font-size: 14px;
         color: #4f5665;
       }
+
       .features-list-check:before {
         content: url("images/check-icon.svg");
         position: relative;
         margin-right: 12px;
         top: 5px;
       }
-      }
     }
   }
+}
 
 
 .pricing {
   background-color: #fbfbfb;
 
-  .container {
+  .items {
     @include flex-row;
     justify-content: space-between;
   }
 
+
   .pricing-header {
     max-width: 555px;
-  width: 100%;
+    width: 100%;
     margin: 60px auto;
+
     h2 {
       text-align: center;
       font-size: 35px;
       margin-bottom: 35px;
     }
+
     p {
       color: #4f5665;
       text-align: center;
+      line-height: 30px;
     }
   }
 
+  .standard-plan {
+    margin: 0 20px;
+  }
+
   .item {
-    width: 30%;
     @include flex-column;
     align-items: center;
+    max-width: 330px;
+    width: 100%;
     padding: 80px 40px;
     border: 2px solid #dddddd;
     border-radius: 10px;
@@ -249,41 +307,61 @@ a {
     }
 
     .plan-features {
-      ul {  list-style-type: none;
+      ul {
+        list-style-type: none;
         padding: 0;
       }
+
       li {
         font-size: 14px;
         color: #4f5665;
         margin-bottom: 20px;
-      } li:before {
-                content: url("images/check-icon-2.svg");
-                position: relative;
-                margin-right: 12px;
-                top: 5px;
-              }
+      }
+
+      li:before {
+        content: url("images/check-icon-2.svg");
+        position: relative;
+        margin-right: 12px;
+        top: 5px;
+      }
     }
+
     .plan-button {
       margin-top: 72px;
+
       h4 {
         font-size: 25px;
         text-align: center;
         margin-bottom: 20px;
+
         span {
           color: #4f5665;
           font-weight: 400;
         }
       }
+
       .red-button {
         @include red-button;
         padding: 12px 63px;
+        font-size: 16px;
+        font-weight: 900;
       }
-    } .plan-button-two {
-    margin-top: 36px;
-          }
+
+      .red-button:hover {
+        background: #f53838;
+        color: white;
+        transition: 200ms;
+      }
+    }
+
+    .plan-button-two {
+      margin-top: 36px;
+    }
+
     .plan-button-three {
       margin-top: 0;
     }
+
   }
 }
 
@@ -293,6 +371,7 @@ a {
     max-width: 555px;
     width: 100%;
     margin: 0 auto 60px;
+
     h2 {
       max-width: 383px;
       width: 100%;
@@ -300,6 +379,7 @@ a {
       text-align: center;
       font-size: 35px;
     }
+
     p {
       color: #4f5665;
       text-align: center;
@@ -307,73 +387,116 @@ a {
     }
   }
 
+  .locations-map {
+    img {
+      width: 100%;
+    }
+  }
+
   .sponsored {
     @include flex-row;
     justify-content: space-between;
+
     .sponsor {
       margin-top: 100px;
       max-width: 190px;
       width: 100%;
+
       img {
         max-height: 52px;
         height: 100%;
         width: 100%;
-      object-fit: cover;
+        object-fit: cover;
       }
     }
   }
 }
 
 .testimonials {
+  .container {
+    .container {
+      @include flex-row;
+      justify-content: space-between;
+      margin-top: 70px;
+    }
+  }
+
+  .testimonials-header {
+    max-width: 555px;
+    width: 100%;
+    margin: 0 auto 60px;
+    text-align: center;
+
+    h2 {
+      font-size: 35px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      line-height: 30px;
+      color: #4f5665;
+    }
+  }
 
   .item {
-    @include  flex-row;
+    @include flex-row;
     align-items: center;
   }
+
   .testimonial-header {
+
+
     .customer-photo {
       margin-right: 20px;
       margin-bottom: 20px;
     }
+
     .customer-name {
       h4 {
         font-size: 18px;
         font-weight: 500;
+        color: #0b132a;;
+
       }
+
       p {
         color: #4f5665;
         font-size: 14px
       }
 
     }
+
     .customer-rating {
       margin-left: auto;
     }
+
     .customer-rating:after {
       position: relative;
       content: url("images/star.svg");
       margin-left: 11px;
     }
   }
+
   .testimonial-body {
-    color: #4f5665;
+    color: #0b132a;;
     line-height: 30px;
   }
 
-//  slider
+  //  slider
 
   .testimonial {
-      width: auto;
     padding: 30px;
     border-radius: 10px;
     border: 2px solid #dddddd;
     height: 250px;
+
+
   }
 
   .tns-controls {
-    position: absolute;
-    margin-top: 300px;
-    margin-left: 67%;
+    //position: absolute;
+    //margin-top: 300px;
+    //margin-left: 67%;
 
     button {
       width: 60px;
@@ -381,6 +504,7 @@ a {
       border-radius: 50%;
       border: 0;
     }
+
     button:first-child {
       margin-right: 20px;
       border: 2px solid #f53838;
@@ -391,6 +515,7 @@ a {
       background-position-x: 20px;
       background-position-y: 19px;
     }
+
     button:last-child {
       font-size: 0;
       background-image: url("images/arrow-right.svg");
@@ -402,30 +527,33 @@ a {
   }
 
   .tns-nav {
-    position: absolute;
-    margin-top: 330px;
 
     button:not(:last-child) {
       margin-right: 10px;
-    } button {
-    width: 15px;
-    height: 15px;
-    background: #ddd;
-    border: 0;
-    border-radius: 50% ;
-          }
+    }
+
+    button {
+      width: 15px;
+      height: 15px;
+      background: #ddd;
+      border: 0;
+      border-radius: 50%;
+      margin-top: calc(50% - 15px);
+    }
+
     button:last-child {
-    display: initial !important;}
+      display: initial !important;
+    }
 
     .tns-nav-active {
       background: #f53838;
     }
   }
+
 }
 
 
 .help {
-  margin-top: 150px;
 
   .container {
     position: absolute;
@@ -445,18 +573,22 @@ a {
     .subscribe-left {
       max-width: 370px;
       width: 100%;
+
       h4 {
         font-size: 35px;
         font-weight: 500;
         margin-bottom: 20px;
       }
+
       p {
         color: #4f5665;
         font-size: 16px;
       }
     }
+
     .subscribe-right {
       height: 100%;
+
       a {
         background: #f53838;
         color: white;
@@ -467,13 +599,19 @@ a {
         text-decoration: none;
         font-weight: 500;
       }
+
+      a:hover {
+        background: #0b132a;
+      }
     }
   }
 }
+
 footer {
   padding: 190px 0 50px;
   background-color: #f8f8f8;
   margin-top: 70px;
+
   .container {
     @include flex-row;
 
@@ -533,25 +671,22 @@ footer {
         font-weight: 500;
         margin-bottom: 20px;
       }
+
       ul {
         padding: 0;
         list-style-type: none;
 
         li {
           margin-bottom: 20px;
+
           a {
             color: #4f5665;
             text-decoration: none;
           }
         }
       }
-
     }
   }
 }
-
-
-
-
 
 
